--- a/deployment_scripts/puppet/modules/ldap_config/templates/SudoScheme.ldif.erb
+++ b/deployment_scripts/puppet/modules/ldap_config/templates/SudoScheme.ldif.erb
@@ -1,4 +1,5 @@
 dn: cn=sudo,cn=schema,cn=config
+changetype: add
 objectClass: olcSchemaConfig
 cn: sudo
 olcAttributeTypes: {0}( 1.3.6.1.4.1.15953.9.1.1 NAME 'sudoUser' DESC 'User(s) who may  run sudo' EQUALITY caseExactIA5Match SUBSTR caseExactIA5SubstringsMatch SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 )
